DIAC-86 removing bundle count